# recallapi

./: .env  .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migrations/2020-09-07-202736_mementos/: down.sql  up.sql
migrations/2020-09-07-202736_write_memories/: down.sql  up.sql
src/: api.rs  lib.rs  memento_db_service.rs  mementos_service.rs  memory_service.rs  models.rs  schema.rs
test-data/: mem_file.json
tests/: db_services_tests.rs  end_to_end_api_tests.rs
